--- a/booking.html
+++ b/booking.html
@@ -7,16 +7,16 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Martian+Mono:wght@100..800&family=Sofia&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/images/sibifav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/sibifav.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" ></script>
-<script defer src="/js/app.js"></script>
+<script defer src="js/app.js"></script>
 </head>
 <body>
      <nav class="navbar navbar-expand-lg bg-color sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="/images/sibilogo2.png" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="images/sibilogo2.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -374,14 +374,14 @@
         <div class="row">
           
             <div class="col-md-4 mt-3 ">
-              <img src="/images/footer-logo4.png" alt="">
+              <img src="images/footer-logo4.png" alt="">
               <div class="mt-1">
                 <p class="foot-p">We are a trusted homecare provider dedicated to making quality homecare services accessible and convenient for all</p>
               </div>
               <div class="mt-2 me-auto footer-mail">
-                <a class="footer-img" href="https://wa.me/+254759138000" target="_blank"><img src="/images/whatsapp.svg" alt=""></a>
-                <a class="footer-img" href="https://shorturl.at/8hyVU" target="_blank"><img src="/images/instagram.svg" alt=""></a>
-                <a class="footer-img" href="https://shorturl.at/BpDA4" target="_blank"><img src="/images/facebook.svg" alt=""></a>
+                <a class="footer-img" href="https://wa.me/+254759138000" target="_blank"><img src="images/whatsapp.svg" alt=""></a>
+                <a class="footer-img" href="https://shorturl.at/8hyVU" target="_blank"><img src="images/instagram.svg" alt=""></a>
+                <a class="footer-img" href="https://shorturl.at/BpDA4" target="_blank"><img src="images/facebook.svg" alt=""></a>
               </div>
             </div>
             <div class="col-md-4 mt-2">
@@ -396,9 +396,9 @@
             <div class="col-md-4">
               <div class="footer-text">
               <h5>Quick Links</h5>
-              <a href="/html/index.html"><p class="foot-p">Home</p></a>
-              <a href="/html/about.html"><p class="foot-p">About us</p></a>
-              <a href="/html/contact.html"><p class="foot-p">Contact us</p></a>
+              <a href="html/index.html"><p class="foot-p">Home</p></a>
+              <a href="html/about.html"><p class="foot-p">About us</p></a>
+              <a href="html/contact.html"><p class="foot-p">Contact us</p></a>
               
             </div>
             </div>
@@ -410,11 +410,11 @@
           <div class="row">
             <div class="col-md-6 d-flex ">
           <div class="ms-auto d-flex mt-4 a-class">
-            <a class="" href="#"><img src="/images/envelope_white.svg" alt=""></a>
+            <a class="" href="#"><img src="images/envelope_white.svg" alt=""></a>
                <a href="mailto:executive@sibicare.co.ke"><p class="foot-p">executive@sibicare.com</p></a>
           </div>
           <div class="ms-auto d-flex mt-4 a-class">
-            <a class="" href="#"><img src="/images/envelope_white.svg" alt=""></a>
+            <a class="" href="#"><img src="images/envelope_white.svg" alt=""></a>
                <a href=" "><p class=" foot-p">+254 759138000</p></a>
           </div>
           </div>
